# FileOG

./: .gitignore  CHANGELOG.md  LICENSE  README.md  package.json  pnpm-lock.yaml
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml  release.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: file_ops.rs  history.rs  llm.rs  mod.rs  scan.rs  settings.rs
src-tauri/src/llm/: mod.rs
src-tauri/src/models/: category.rs  file_item.rs  mod.rs  operation.rs  settings.rs
src-tauri/src/services/: llm.rs  mod.rs
src/components/file/: FileList.tsx
src/components/layout/: AppSidebar.tsx  MainLayout.tsx
src/components/operation/: ProgressPanel.tsx
src/components/settings/: SettingsDialog.tsx
src/services/: llm.ts
src/styles/: globals.css
src/types/: index.ts
